c4prj2_input/grade.txt
Grading at Wed Mar 10 21:58:29 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:19:24: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     const char * ptr = card[0];
                        ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
